fix: Error summary alignment

--- a/css/components/alerts.css
+++ b/css/components/alerts.css
@@ -19,6 +19,7 @@
 .toast:not(:empty),
 #form-error-summary:not(:empty):not([hidden]) {
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
   gap: var(--space-3);
   padding: var(--space-4) var(--space-5);
